--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                     <span class="navbar-toggler-icon"><i class="fas fa-bars fa-lg mt-2"></i></span> 
                 </button>
                 <div class="collapse navbar-collapse" id="navMain">
-                    <ul class="navbar-nav mr-auto ml-auto">
+                    <ul class="navbar-nav mx-auto">
                         <li class="nav-item active"> 
-                            <a class="nav-link d-inline-block pt-md-4 pb-md-3 px-lg-3" href="#">Home <span class="sr-only">(current)</span></a> 
+                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Home <span class="sr-only">(current)</span></a> 
                         </li>
                         <li class="nav-item"> 
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">My Account</a>
@@ -67,8 +67,8 @@
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Contact</a>
                         </li>
                     </ul>
-                    <div>
-                        <a href="#">Sign in</a>&nbsp;&nbsp;&nbsp;&nbsp;
+                    <div class="my-4 my-md-0">
+                        <a class="mr-md-3" href="#">Sign in</a>
                         <button class="btn btn-outline-primary" type="submit">Register</button>
                     </div>
                 </div>
