update new about page

--- a/login.html
+++ b/login.html
@@ -79,7 +79,10 @@
             <div class="container">
                 <div class="row py-2 py-md-5">
                     <div class="signIn col-md-6 offset-md-3 px-3 px-md-0">
-                        <h2 class="d-block w-100 ml-3 mb-3">Sign in</h2>
+                        <h2 class="d-block col-12 ml-3 mb-3">Sign in</h2>
+                        <div class="alert alert-danger mt-md-4" role="alert">
+                            <p class="my-0">Please activate your account before signing in. You received an e-mail from us containing your activation link. <b>Please make sure to check your spambox as well.</b></p>
+                        </div>
                         <form class="bg-secon w-100 p-3 px-md-4 py-md-5" action="">
                             <div class="mb-3">
                                 <label for="signIn-email">Email</label>
