update form word

--- a/Backup/index.html
+++ b/Backup/index.html
@@ -46,14 +46,12 @@
                 <div class="collapse navbar-collapse" id="navMain">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item active"> 
-                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="/.">Home <span class="sr-only">(current)</span></a> 
+                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Home <span class="sr-only">(current)</span></a> 
                         </li>
                         <li class="nav-item"> 
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">My Account</a>
                         </li>
-                        <li class="nav-item"> 
-                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="buy.html">Buy</a>
-                        </li>
+                        
                         <li class="nav-item"> 
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Deposit</a>
                         </li>
@@ -64,7 +62,7 @@
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Product</a>
                         </li>
                         <li class="nav-item"> 
-                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="contact.html">Contact</a>
+                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Contact</a>
                         </li>
                     </ul>
                     <div class="my-4 my-md-0">
@@ -147,29 +145,7 @@
                             </figure>
                         </div>
 
-                        <div class="coinItem d-flex justify-content-between bg-secon rounded py-4 px-3">
-                            <div class="coinContent text-left">
-                                <h4>DigiByte</h4>
-                                <p class="my-0">€ 9862.82</p>
-                                <small><i>24h</i> &nbsp;<i class="fas fa-level-up-alt">&nbsp; 4.01%</i></small>
-                            </div>
-                            <figure class="text-center">
-                                <img class="img-fluid rounded" src="image/icon/dgb.png" alt="">
-                                <figcaption>DGB</figcaption>
-                            </figure>
-                        </div>
-
-                        <div class="coinItem d-flex justify-content-between bg-secon rounded py-4 px-3">
-                            <div class="coinContent text-left">
-                                <h4>Ravencoin</h4>
-                                <p class="my-0">€ 9862.82</p>
-                                <small><i>24h&nbsp;</i> <i class="fas fa-level-up-alt">&nbsp; 4.01%</i></small>
-                            </div>
-                            <figure class="text-center">
-                                <img class="img-fluid rounded" src="image/icon/rvn.png" alt="">
-                                <figcaption>RVN</figcaption>
-                            </figure>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
