--- a/about-03.html
+++ b/about-03.html
@@ -46,13 +46,13 @@
                 <div class="collapse navbar-collapse" id="navMain">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item active"> 
-                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Home <span class="sr-only">(current)</span></a> 
+                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="/.">Home <span class="sr-only">(current)</span></a> 
                         </li>
                         <li class="nav-item"> 
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">My Account</a>
                         </li>
                         <li class="nav-item"> 
-                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Login</a>
+                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="buy.html">Buy</a>
                         </li>
                         <li class="nav-item"> 
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Deposit</a>
@@ -64,7 +64,7 @@
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Product</a>
                         </li>
                         <li class="nav-item"> 
-                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Contact</a>
+                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <div class="my-4 my-md-0">
@@ -177,13 +177,14 @@
                 <div class="container">
                     <div class="row py-2 py-md-5">
                         <div class="aboutPage d-md-flex flex-wrap">
-                            <h2 class="d-block col-12 my-3"><i>What are cryptocurrencies</i></h2>
+                            <h2 class="d-block col-12 my-3"><i>About BitCapo exchange</i></h2>
                             <div class="col-md-7 text-justify">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales nibh nulla, vitae gravida sapien placerat eu. Ut venenatis tristique lobortis. Suspendisse velit nulla, finibus a molestie in, luctus vitae tortor. Morbi facilisis egestas urna sed venenatis. Aenean commodo magna vel ex sollicitudin vehicula. Aenean eu erat quis augue ullamcorper rhoncus. Quisque sit amet elit augue. Ut maximus nunc eget lorem convallis, quis commodo ligula convallis.</p>
-                                <p>Phasellus vitae tincidunt ante, non venenatis nunc. Morbi ornare dolor eros, at iaculis dui vulputate in. Vivamus libero turpis, venenatis ut vehicula dapibus, consectetur at lectus. Donec feugiat bibendum volutpat. Mauris in vestibulum enim, id viverra purus. Maecenas bibendum dapibus finibus. Integer volutpat, ante at bibendum feugiat, turpis erat viverra massa, pulvinar maximus diam leo eget eros. Fusce et lacus vel justo efficitur scelerisque eget sit amet nulla. Etiam ut leo quis quam faucibus varius non at lacus. Etiam sodales tincidunt erat ut ullamcorper. Praesent pretium ut lorem quis dignissim. Curabitur et diam sapien. Ut aliquam, sapien in mattis ullamcorper, nisl turpis tempor tortor, ac fringilla purus tortor vitae risus. Mauris feugiat purus eget urna elementum lobortis.</p>
+                                <p class="mb-2">BitCapo was created to provide a simplified gateway to the cryptocurrency sector, this is done through sharing knowledge to their users and by providing several ways to acquire and store them.</p>
+                                <p class="mb-2">On top of that BitCapo exchange is fully licensed according to the mandatory region regulations regarding cryptocurrency, privacy and security.  Currently providing service in: Europe.</p>
+                                <p>The BitCapo exchange is happy to invest time and attention into their users, this is why they’re available for contact 24/7.</p>
                             </div>
                             <div class="col-md-5 pb-md-0 pb-5">
-                                <img class="img-fluid" src="http://lorempixel.com/1280/768/" alt="">
+                                <img class="img-fluid" src="image/bitcapo-logo3.png" alt="">
                             </div>
                         </div>
                         
@@ -200,31 +201,19 @@
                 <div class="container">
                     <div class="row py-2 py-md-5">
                         <div class="howDocreate w-100 mt-4 px-3 px-md-0 d-flex flex-wrap">
-                            <h2 class="d-block col-12 mb-3"><i>How do I buy cryptocurrencies?</i></h2>
-                            <p class="mb-0 d-block col-12">LiteBit offers a wide range of cryptocurrencies as a broker. The purchase of cryptocurrencies works as follows:</p>
+                            <h2 class="d-block col-12 mb-3"><i>How do I buy cryptocurrency ?</i></h2>
+                            <p class="mb-0 d-block col-12">See reference image above :</p>
                             <div class="howCard position-relative px-3 pt-3 pb-4 pb-md-5">
-                                <p class="text-left">1</p>
-                                <span class="d-block my-4">Click on Buy at the top of the navigation bar.</span>
+                                <p class="text-left">1. Deposit Money</p>
+                                <span class="d-block my-4">Deposit EUR or GBP to credit your account</span>
                             </div>
                             <div class="howCard position-relative px-3 pt-3 pb-4 pb-md-5">
-                                <p class="text-left">2</p>
-                                <span class="d-block my-4">Select the desired cryptocurrency.</span>
+                                <p class="text-left">2. Await confirmation of deposit</p>
+                                <span class="d-block my-4">Wait for your account to be accredited.</span>
                             </div>
                             <div class="howCard position-relative px-3 pt-3 pb-4 pb-md-5">
-                                <p class="text-left">3</p>
-                                <span class="d-block my-4">Enter the amount of cryptocurrency you would like or the amount you want to spend.</span>
-                            </div>
-                            <div class="howCard position-relative px-3 pt-3 pb-4 pb-md-5">
-                                <p class="text-left">4</p>
-                                <span class="d-block my-4">We recommend using the LiteBit wallet. Are you using an external wallet? Then enter your external wallet address.</span>
-                            </div>
-                            <div class="howCard position-relative px-3 pt-3 pb-4 pb-md-5">
-                                <p class="text-left">5</p>
-                                <span class="d-block my-4">Select the payment method and complete the payment for your order.</span>
-                            </div>
-                            <div class="howCard position-relative px-3 pt-3 pb-4 pb-md-5">
-                                <p class="text-left">6</p>
-                                <span class="d-block my-4">Finally, your order can be tracked in your LiteBit wallet.</span>
+                                <p class="text-left">3. Credit</p>
+                                <span class="d-block my-4">Use your credit for action or withdrawal on BitCapo.</span>
                             </div>
                         </div>
                         
