--- a/about.html
+++ b/about.html
@@ -46,13 +46,13 @@
                 <div class="collapse navbar-collapse" id="navMain">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item active"> 
-                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Home <span class="sr-only">(current)</span></a> 
+                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="/.">Home <span class="sr-only">(current)</span></a> 
                         </li>
                         <li class="nav-item"> 
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">My Account</a>
                         </li>
                         <li class="nav-item"> 
-                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Login</a>
+                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="buy.html">Buy</a>
                         </li>
                         <li class="nav-item"> 
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Deposit</a>
@@ -64,7 +64,7 @@
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Product</a>
                         </li>
                         <li class="nav-item"> 
-                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Contact</a>
+                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <div class="my-4 my-md-0">
@@ -177,13 +177,27 @@
                 <div class="container">
                     <div class="row py-2 py-md-5">
                         <div class="aboutPage d-md-flex flex-wrap">
-                            <h2 class="d-block col-12 my-3"><i>About Bit Capo</i></h2>
+                            <h2 class="d-block col-12 my-3"><i>What are Cryptocurrencies?</i></h2>
                             <div class="col-md-7 text-justify">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales nibh nulla, vitae gravida sapien placerat eu. Ut venenatis tristique lobortis. Suspendisse velit nulla, finibus a molestie in, luctus vitae tortor. Morbi facilisis egestas urna sed venenatis. Aenean commodo magna vel ex sollicitudin vehicula. Aenean eu erat quis augue ullamcorper rhoncus. Quisque sit amet elit augue. Ut maximus nunc eget lorem convallis, quis commodo ligula convallis.</p>
-                                <p>Phasellus vitae tincidunt ante, non venenatis nunc. Morbi ornare dolor eros, at iaculis dui vulputate in. Vivamus libero turpis, venenatis ut vehicula dapibus, consectetur at lectus. Donec feugiat bibendum volutpat. Mauris in vestibulum enim, id viverra purus. Maecenas bibendum dapibus finibus. Integer volutpat, ante at bibendum feugiat, turpis erat viverra massa, pulvinar maximus diam leo eget eros. Fusce et lacus vel justo efficitur scelerisque eget sit amet nulla. Etiam ut leo quis quam faucibus varius non at lacus. Etiam sodales tincidunt erat ut ullamcorper. Praesent pretium ut lorem quis dignissim. Curabitur et diam sapien. Ut aliquam, sapien in mattis ullamcorper, nisl turpis tempor tortor, ac fringilla purus tortor vitae risus. Mauris feugiat purus eget urna elementum lobortis.</p>
+                                <p class="mb-2">A cryptocurrency can be best described as a piece of digital software which makes use of a cryptographic algorithm which contains a database. This database is also known as the Blockchain.</p>
+                                <p class="mb-2">Cryptocurrencies can be exchanged between persons without having the need for an intermediary (like a bank) to approve the transactions or having to hold your software.</p>
+                                <p class="mb-2">The monetary value of a cryptocurrency comes from the exchange rate towards the traditional currencies such as the U.S. dollar and EURO.</p>
+                                <p class="mb-2">By having an exchangeable person to person software with a cryptographic algorithm, there is also a need for security. This is where the blockchain database comes in.</p>
+                                <p class="mb-2">The blockchain is often a public ledger which contains information about every transaction of data on its chain. All this data gets compiled into a separate file on the blockchain called blocks. How often the blockchain requires data verification determines how many blocks are created per second(s) or minute(s) and this is set within the parameters of the blockchain.</p>
+                                <p>Starting from the first block, the following blocks gets added on every x amount of time, creating a chain of blocks.</p>
+                                <h4 class="mt-5">Why is this secure?</h4>
+                                <p class="mb-2">Every block gets verified by multiple computers communicating with the database, if all the computers verified the block with the same results, then the block gets added to the database.</p>
+                                <p class="mb-2">Through this way human errors are eliminated, the cost of this communication is electricity.</p>
+                                <p class="mb-2">Why would these computers spend electricity costs to verify these blocks for the database?</p>
+                                <p>If we look at cryptocurrencies most of them have a set amount of software that will ever be created, the verifying computers, also called miners, get rewarded for their work through a block reward.</p>
+                                <h4 class="mt-5">What is a block reward?</h4>
+                                <p>A block reward is the amount of cryptocurrencies being released when a block is verified, the amount that is released gets rewarded (or paid) to the miners for their work. Through this way a database is sustainable.</p>
+                                <h4 class="mt-5">What happens if the set amount, maximum supply, is reached?</h4>
+                                <p class="mb-2">Once the maximum supply of the software is reached the miners will get rewarded with the fee’s that are created for uploading data on the database. The fee on every data chain is different but in most cases it will be below $0.001 per upload. Adding all these fees up, should be enough incentive to keep working on updating and verifying the database.</p>
+                                <p>If this is not the case then there are always other possibilities to discover, such as reducing the amount of software that is released every block.</p>
                             </div>
                             <div class="col-md-5 pb-md-0 pb-5">
-                                <img class="img-fluid" src="http://lorempixel.com/1280/768/" alt="">
+                                <img class="img-fluid" src="image/bitcapo-logo3.png" alt="">
                             </div>
                         </div>
                     </div>
