--- a/login.html
+++ b/login.html
@@ -44,15 +44,15 @@
                     <span class="navbar-toggler-icon"><i class="fas fa-bars fa-lg mt-2"></i></span> 
                 </button>
                 <div class="collapse navbar-collapse" id="navMain">
-                    <ul class="navbar-nav mr-auto ml-auto">
+                    <ul class="navbar-nav mx-auto">
                         <li class="nav-item active"> 
-                            <a class="nav-link d-inline-block pt-md-4 pb-md-3 px-lg-3" href="#">Home <span class="sr-only">(current)</span></a> 
+                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="/.">Home <span class="sr-only">(current)</span></a> 
                         </li>
                         <li class="nav-item"> 
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">My Account</a>
                         </li>
                         <li class="nav-item"> 
-                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Login</a>
+                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="buy.html">Buy</a>
                         </li>
                         <li class="nav-item"> 
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Deposit</a>
@@ -64,7 +64,7 @@
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Product</a>
                         </li>
                         <li class="nav-item"> 
-                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Contact</a>
+                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="contact.html">Contact</a>
                         </li>
                     </ul>
                     <div>
