--- a/Backup/index-7items.html
+++ b/Backup/index-7items.html
@@ -46,13 +46,16 @@
                 <div class="collapse navbar-collapse" id="navMain">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item active"> 
-                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="/.">Home <span class="sr-only">(current)</span></a> 
+                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Home <span class="sr-only">(current)</span></a> 
                         </li>
                         <li class="nav-item"> 
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">My Account</a>
                         </li>
+						<li class="nav-item"> 
+                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Buy</a>
+                        </li>
                         <li class="nav-item"> 
-                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="buy.html">Buy</a>
+                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Login</a>
                         </li>
                         <li class="nav-item"> 
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Deposit</a>
@@ -64,7 +67,7 @@
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Product</a>
                         </li>
                         <li class="nav-item"> 
-                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="contact.html">Contact</a>
+                            <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="#">Contact</a>
                         </li>
                     </ul>
                     <div class="my-4 my-md-0">
