--- a/register-05.html
+++ b/register-05.html
@@ -79,74 +79,18 @@
             <div class="container">
                 <div class="row py-2 py-md-5">
                     <div class="register col-md-6 offset-md-3 px-3 px-md-0">
-                        <div class="progressbar position-relative d-flex justify-content-between mb-3 mb-md-4 mx-3">
-                            <div class="progressbarItem text-center">
-                                <span class="rounded-circle d-inline-block active">1</span>
-                                <small class="d-block mt-2">Personal details</small>
-                            </div>
-                            <div class="progressbarItem text-center">
-                                <span class="rounded-circle d-inline-block">2</span>
-                                <small class="d-block mt-2">Verify email</small>
-                            </div>
-                            <div class="progressbarItem text-center">
-                                <span class="rounded-circle d-inline-block">3</span>
-                                <small class="d-block mt-2">Verify phone</small>
-                            </div>
-                            <div class="progressbarItem text-center">
-                                <span class="rounded-circle d-inline-block">4</span>
-                                <small class="d-block mt-2">Security</small>
-                            </div>
-
-                        </div>
-
                         <form class="register-frm bg-secon w-100 p-4 rounded" action="">
                             <div class="reFrm-top text-center mb-4">
-                                <i class="far fa-user fa-3x mt-0 mb-2 mt-mb-4 mt-md-1"></i>
-                                <h2 class="reFrm-title">Personal details</h2>
+                                <i class="far fa-check-circle fa-3x mt-0 mb-2 mt-mb-4 mt-md-1"></i>
+                                <h2 class="reFrm-title">Congratulations your account has been succesfully created.</h2>
                             </div>
-                            <div class="form-row">
-                                <div class="form-group col-md-6">
-                                    <label class="font-weight-bold" for="fNames">First name(s)</label>
-                                    <input type="text" class="form-control" id="fNames" placeholder="Please enter your first name(s)"> 
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label class="font-weight-bold" for="lNames">Last name</label>
-                                    <input type="password" class="form-control" id="lNames" placeholder="Please enter your last name"> 
-                                </div>
+                            <div class="text-center">
+                                <p>Before you are able to acquire cryptocurrency, you will have to make a EUR/GBP deposit.</p>
+                                <p>You can now use the BitCapo exchange</p>
+                                <p>Click on the logo below to return to the homescreen.</p>
+                                <i class="fas fa-arrow-down fa-2x"></i>
+                                <a class="d-block mt-3" href="index.html"><img class="img-fluid" src="image/bitcapo-logo4.png" alt=""></a>
                             </div>
-                            <div class="form-group">
-                                <label class="font-weight-bold" for="eAddress">Email address</label>
-                                <input type="text" class="form-control" id="eAddress" placeholder="Please enter your email address"> 
-                            </div>
-                            <div class="form-row">
-                                <label class="font-weight-bold form-group col-md-12 mb-2" for="password">Password</label>
-                                <div class="form-group col-10">
-                                    <input type="password" id="password" class="form-control" placeholder="Please enter your password"> 
-                                </div>
-                                <div class="form-group col-2">
-                                    <button class="showPass w-100 text-center"><i class="fas fa-eye fa-lg"></i></button>
-                                </div>
-                            </div>
-                            <div class="form-row">
-                                <label class="font-weight-bold form-group col-md-12 mb-2" for="confirmpassword">Confirm password</label>
-                                <div class="form-group col-10">
-                                    <input type="password" id="confirmpassword" class="form-control" placeholder="Please enter your password"> 
-                                </div>
-                                <div class="form-group col-2">
-                                    <button class="showPass w-100 text-center"><i class="fas fa-eye fa-lg"></i></button>
-                                </div>
-                            </div>
-
-                            <div class="form-group custom-control custom-checkbox mb-0 mt-2">
-                                <input type="checkbox" class="custom-control-input" id="reNoti">
-                                <label class="custom-control-label" for="reNoti">Receive useful tips and notifications.</label>
-                            </div>
-                            <div class="form-group custom-control custom-checkbox ">
-                                <input type="checkbox" class="custom-control-input" id="terms">
-                                <label class="custom-control-label" for="terms"><a href="#"><u>Terms and conditionsa</u></a> is mandatory to create an account</label>
-                            </div>
-                          
-                            <button type="submit" class="btn btn-primary position-relative w-100 mb-3">Create my account <i class="fas fa-arrow-right position-absolute"></i></button>
                         </form>
                     </div>
                 </div>
