update account-login,  account-login-02, verify-payment page

--- a/account-login.html
+++ b/account-login.html
@@ -67,9 +67,25 @@
                             <a class="nav-link pt-md-4 pb-md-3 px-lg-3" href="contact.html">Contact</a>
                         </li>
                     </ul>
-                    <div class="my-4 my-md-0">
-                        <a class="mr-md-3" href="#">Sign in</a>
-                        <button class="btn btn-outline-primary" type="submit">Register</button>
+                    
+                    <div class="logined">
+                        <div class="dropdown text-left">
+                            <a class="dropdown-toggle py-0" id="profileMenu" data-toggle="dropdown">
+                                <i class="far fa-user fa-lg mr-2"></i>
+                                <span>Zet</span>
+                            </a>
+                            <div class="dropdown-menu bg-main text-orange" aria-labelledby="profileMenu"> 
+                                <a class="dropdown-item" href="#">My account</a> 
+                                <a class="dropdown-item" href="#">2FA</a> 
+                                <a class="dropdown-item" href="#">Tips and upgrade</a> 
+                                <a class="dropdown-item" href="#">My order history</a> 
+                                <a class="dropdown-item" href="#">My price arlets</a> 
+                                <a class="dropdown-item" href="#">Affiliate program</a> 
+                                <a class="dropdown-item" href="#">Verified payment</a> 
+                                <hr>
+                                <a class="dropdown-item" href="#">Log out</a> 
+                            </div>
+                        </div>
                     </div>
                 </div>
             </nav>
