--- a/verify-payment.html
+++ b/verify-payment.html
@@ -146,7 +146,7 @@
                                 </div>
                             </div>
                             
-                            <div class="col-12 pl-md-0 mt-md-5 mt-4">
+                            <div class="pl-md-0 mt-md-5 mt-4">
                                 <h4 class="d-inline-block font-weight-light pb-2 border-bottom border-2x border-secon">Verified Bancontact cards</h4>
                                 <div class="d-flex flex-wrap">
                                     <table class="table-secon table-striped text-orange table border border-third mb-0 col-md-6 px-0">
