--- a/about-02.html
+++ b/about-02.html
@@ -306,7 +306,7 @@
                             <div class="footerLogo mb-3">
                                 <img src="image/-logo.png" alt="">
                             </div>
-                            <p>Tòa nhà tài chính Bitexco, 7, 2 Hải Triều, Bến Nghé, Quận 1, Hồ Chí Minh</p>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             <p>Chamber of commerce: 63661438</p>
                             <p>IBAN: NL22 ABNA 0544 8782 64</p>
                         </div>
