--- a/contact.html
+++ b/contact.html
@@ -220,7 +220,7 @@
                                 <div class="bg-main d-flex flex-wrap mt-4 px-3 py-4 rounded">
                                     <div class="col-md-6 pl-0">
                                         <h4 class="font-weight-light mb-4">Company information</h4>
-                                        <p>Tòa nhà tài chính Bitexco, 7, 2 Hải Triều, Bến Nghé, Quận 1, Hồ Chí Minh</p>
+                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                                         <p>Chamber of commerce: 63661438</p>
                                         <p>IBAN: NL22 ABNA 0544 8782 64</p>
                                     </div>
@@ -272,7 +272,7 @@
                             <div class="footerLogo mb-3">
                                 <img src="image/-logo.png" alt="">
                             </div>
-                            <p>Tòa nhà tài chính Bitexco, 7, 2 Hải Triều, Bến Nghé, Quận 1, Hồ Chí Minh</p>
+                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             <p>Chamber of commerce: 63661438</p>
                             <p>IBAN: NL22 ABNA 0544 8782 64</p>
                         </div>
