--- a/buy.html
+++ b/buy.html
@@ -185,7 +185,8 @@
                                         <div class="form-row">
                                             <div class="form-group col-md-6">
                                                 <select class="form-control" id="selectCoin">
-                                                    <option value="Bitcoin" selected>Bitcoin</option>
+                                                    <option value="BitCapo credit" selected>BitCapo credit</option>
+                                                    <option value="Bitcoin">Bitcoin</option>
                                                     <option value="Ethereum">Ethereum</option>
                                                     <option value="Cardano">Cardano</option>
                                                     <option value="Litecoin">Litecoin</option>
@@ -234,7 +235,7 @@
                                         <div class="mt-3">
                                             <ul class="nav nav-pills mb-3" role="tablist">
                                                 <li class="nav-item text-center col-6 p-0"> 
-                                                    <a class="nav-link rounded-0 active" id="walletType-01" data-toggle="pill" href="#walletType-content-01" role="tab" aria-controls="walletType-content-01" aria-selected="true">Bit Capo wallet</a> 
+                                                    <a class="nav-link rounded-0 active" id="walletType-01" data-toggle="pill" href="#walletType-content-01" role="tab" aria-controls="walletType-content-01" aria-selected="true">BitCapo wallet</a> 
                                                 </li>
                                                 
                                                 <li class="nav-item text-center col-6 p-0"> 
@@ -249,7 +250,7 @@
 
                                                 <div class="tab-pane fade" id="walletType-content-02" role="tabpanel" aria-labelledby="walletType-content-02">
                                                     <div class="form-group">
-                                                        <label class="font-weight-bold" for="externalWallet">Receive Address <a href="#">[?]</a></label>
+                                                        <label class="font-weight-bold" for="externalWallet">Receiving adress <a href="#">[?]</a></label>
                                                         <input type="text" class="form-control" id="externalWallet" placeholder="e.g. 3MbxZdBemDGd7qJBimVcTgof1kvBhQ4PmS"> 
                                                     </div>
                                                 </div>    
@@ -263,7 +264,7 @@
                                             <select class="form-control" id="paymentMethod">
                                                 <option>iDeal</option>
                                                 <option>SEPA Bankwire</option>
-                                                <option>LiteBit Credits</option>
+                                                <option>BitCapo Credits</option>
                                                 <option>GiroPay</option>
                                                 <option>Bancontact</option>
                                                 <option>MyBank</option>
@@ -295,7 +296,7 @@
                             <div class="col-lg-7 pb-md-0 pb-5">
                                 <h4 class="font-weight-light mt-5 mt-lg-0">What is Bitcoin ?</h4>
                                 <div class="infoCoin bg-main px-3 py-4 rounded">
-                                    <p class="text-justify"><small>Bitcoin (BTC) is the first and most well-known digital currency. Bitcoin forms the basis for other cryptocurrencies and uses a decentralised network, called the blockchain. This prime digital currency makes it possible to carry out mutually beneficial transactions without the intervention of a third party. Bitcoin is the largest and most widely adopted cryptocurrency. It has built-in scarcity, with a total of just 21 million bitcoins ever entering the system. You can safely and reliably buy, sell, send and store Bitcoin at LiteBit.</small></p>
+                                    <p class="text-justify"><small>Bitcoin (BTC) is the first and most well-known digital currency. Bitcoin forms the basis for other cryptocurrencies and uses a decentralised network, called the blockchain. This prime digital currency makes it possible to carry out mutually beneficial transactions without the intervention of a third party. Bitcoin is the largest and most widely adopted cryptocurrency. It has built-in scarcity, with a total of just 21 million bitcoins ever entering the system. You can safely and reliably buy, sell, send and store Bitcoin at BitCapo.</small></p>
                                     <div class="d-flex mt-4">
                                         <a href="" class="text-center mx-md-3 mx-2">
                                             <i class="fas fa-globe fa-2x"></i>
@@ -323,7 +324,7 @@
                                 
                                 <h5 class="font-weight-light mt-5">Bitcoin price notification</h5>
                                 <div class="notificationCoin bg-main px-3 py-4 rounded">
-                                    <small>Would you like to receive an email when Bitcoin reaches the desired price? We can keep you informed for free. You can also use this service without a LiteBit account.</small>
+                                    <small>Would you like to receive an email when Bitcoin reaches the desired price? We can keep you informed for free. You can also use this service without a BitCapo account.</small>
                                     <hr>
                                     <form>
                                         <div class="form-group">
